add test jvm argument for arrow